# utility-readonly

./: .env  .gitignore  .gitpod.Dockerfile  .gitpod.yml  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Installation.md  Makefile  README.md  SECURITY.md  build.rs  deny.toml  genesis.json  lychee.toml  new_script.sh  rust-toolchain.toml  signer0_key.json  signer1_key.json  signer2_key.json
.cargo/: config
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: feature_stabilization.md
.github/workflows/: ci.yml  master_fuzzer_binaries.yml  neard_assertion_binary.yml  neard_nightly_binary.yml  neard_release.yml  ondemand_fuzzer_binaries.yml  unc_crates_publish.yml  uncd_assertion_binary.yml  uncd_nightly_binary.yml  uncd_release.yml
.run/: Debug testrsa.run.xml  Run Neard.run.xml
aes_demo/: Cargo.toml
aes_demo/src/: aes128_crypto.rs  aes256_crypto.rs  main.rs
benches/: benchmarks.rs  find.rs
chain/chain-primitives/: Cargo.toml  README.md
chain/chunks/: README.md
chain/chunks-primitives/: Cargo.toml  README.md
chain/client-primitives/: Cargo.toml
chain/epoch-manager/: Cargo.toml  README.md
chain/indexer/: CHANGELOG.md  Cargo.toml  README.md
chain/indexer-primitives/: Cargo.toml  README.md
chain/jsonrpc/: README.md
chain/jsonrpc-primitives/: Cargo.toml
chain/telemetry/: README.md
compress/: .gitignore  Cargo.toml
compress/src/: main.rs
core/async/: Cargo.toml
core/chain-configs/: Cargo.toml
core/crypto/: Cargo.toml
core/dyn-configs/: Cargo.toml  README.md
core/o11y/: Cargo.toml
core/parameters/: Cargo.toml
core/primitives/: Cargo.toml
core/primitives-core/: Cargo.toml
debug_scripts/: send_validator_logs.py
docs/: README.md
docs/architecture/: README.md  network.md
docs/practices/: docs.md  protocol_upgrade.md  rust.md  security_vulnerabilities.md  style.md  tracking_issues.md  when_to_use_private_repository.md
docs/test_networks/: mainnet_spoon.md
examples/: basic_operations.rs
framework/: Cargo.toml
framework/benches/: store.rs
framework/src/: cold_storage.rs  config.rs  dyn_config.rs  entity_debug.rs  lib.rs
framework/tests/: economics.rs
genesis-tools/: README.md  signer0_key.json  signer1_key.json  signer2_key.json
genesis-tools/genesis-csv-to-json/: Cargo.toml
genesis-tools/genesis-populate/: Cargo.toml
genesis-tools/keypair-generator/: Cargo.toml
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/public/: 404.html  health.html  index.html
httpserver/src/: main.rs  server.rs
integration-tests/: Cargo.toml
integration-tests/src/: genesis_helpers.rs  nearcore_utils.rs  runtime_utils.rs  unc_utils.rs
leveldb-sys/: Cargo.toml  README.md
leveldb-sys/src/: build.rs  lib.rs
leveldb_xuexi/: Cargo.toml
libp2p_xuexi/distributed-key-value-store/: Cargo.toml
libp2p_xuexi/file-sharing/: Cargo.toml
libp2p_xuexi/ipfs-kad/: Cargo.toml
libp2p_xuexi/ping/: Cargo.toml
libp2p_xuexi/test-file/: Cargo.toml
libp2p_xuexi/test-file/src/: main.rs
main/: .gitignore
migrations/2023-10-12-101848_create_posts/: up.sql
migrations/2023-10-13-040643_message/: up.sql
migrations/2023-10-13-045111_student/: up.sql
my_db/: 000005.ldb  000010.ldb  000013.ldb  CURRENT  LOG  LOG.old  MANIFEST-000012
nearcore/: Cargo.toml
nearcore/src/: config.rs  entity_debug.rs  lib.rs
neard/: Cargo.toml
neard/src/: main.rs
nightly/: README.md  expensive.txt
pytest/: README.md
runtime/: CHANGELOG.md
scripts/: binary_release.sh  mac-release.sh  nayduck.py  nodelib.py  parallel_coverage.py  run_docker.sh  split_storage_migration.sh  testlib.py  upload-cf-r2.py
src/: benches.rs  client.rs  course.sql  hash.c  hash.h  hash_go.rs  index.html  lib.rs  libc.rs  macros.rs  main.rs  models.rs  schema.rs  server.rs  server_go.rs  tcp.rs  test.rs
tests/: leveldb_pithy_test.rs  leveldb_test.rs
uncd/: Cargo.toml  build.rs
webservice/: Cargo.toml
(+495 files in other folders)
