[package]
name = "utility"
version = "0.1.0"
edition = "2021"
description = "A utility tool for various tasks"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
druid = "0.8.3"

[build-dependencies]
cc = "1.0"


[package.metadata.bundle]
name = "Utility" # 可读名称
identifier = "com.yourdomain.Utility"
icon = [
    "/Users/chn-xcz/Downloads/130c5f69179f1f113c91057161c9a14c_Visual%20Studio%20Code.icns",
] # macOS icon, 更新为正确路径
version = "0.1.0"
# resources = ["path/to/your/resource"]  # 如果有资源，更新为正确路径
