[package]
name = "utility"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb-sys = { path = "leveldb-sys", version = "2.0.10" }
libc = "0.2.*"
chrono = "0.4.31"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
# 如果要进行基准测试，可以将这部分添加到 Cargo.toml 中
#[[bench]]
#name = "write_data_benchmark"
#path = "benches/benchmarks.rs"
#name = "benchmarks"
#harness = false

[[bench]]
name = "find"
harness = false