[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
#环境变量工具
dotenv = "0.15.0"
#时间
chrono = { version = "0.4.23", features = ["serde"] }
#序列化
serde = { version = "1.0.152", features = ["derive"] }
#数据库访问工具
sqlx = { version = "0.6.2", features = ["postgres","runtime-actix-rustls","macros","chrono"] }
diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15"
