[package]
name = "aes_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
cipher = {version = "0.4.3", features=["block-padding"]}
ctr = "0.9"
# aes128
#aes = "0.8.2"
# aes256
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.1"
rand = "0.8.4"
bytebuffer = "0.2.1"
base64 = "0.13.0"